# Django_practice

./: README.md  pyproject.toml
src/inventory/: forms.py  models.py  urls.py  views.py
src/inventory/migrations/: 0001_initial.py
src/inventory/templates/inventory/: add_material.html  get_materials.html  material_details.html  materials_list.html
src/inventory/templatetags/: inventory_tags.py
src/stocks/: asgi.py  settings.py  urls.py  wsgi.py
src/templates/: base.html  home.html
src/users/: forms.py  models.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
src/users/templates/users/: login.html  profile.html  register.html
