[project]
name = "django-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Hewlet",email = "zdanevych2011@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django (>=5.2.7,<6.0.0)",
    "crispy-bootstrap5 (>=2025.6,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
